--- a/src/styles.scss
+++ b/src/styles.scss
@@ -299,15 +299,34 @@ ul {
   }
 
   &__link {
+    position: relative;
+    display: inline-block;
     font-size: 20px;
     font-weight: $font-weight-demi;
     text-transform: uppercase;
     letter-spacing: 1.2px;
     color: $color-off-black;
+    padding-bottom: 4px;
     transition: color 0.3s ease;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background-color: $color-plum;
+      transform: scaleX(0);
+      transition: transform 0.3s ease;
+    }
 
     &:hover {
       color: $color-peach;
+    }
+
+    &--active::after {
+      transform: scaleX(1);
     }
 
     @include respond-to($breakpoint-mobile) {
