Fix CSS background image path

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -596,7 +596,7 @@ ul {
   &::before {
     content: '';
     @include absolute-fill;
-    background-image: url('/assets/images/quote-background.jpg');
+    background-image: url('../images/quote-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
