--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -497,7 +497,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/images/quote-background.jpg");
+  background-image: url("../images/quote-background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
