--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -525,7 +525,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../images/quote-background.jpg");
+  background-image: url("../images/quote-background.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
