Reorder info cards and update mobile image sizing
- Moved Collaborative Care Culture to second position in info cards
- Changed Real Patient Impact to third position
- Updated mobile image height to auto for full-width display

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -595,7 +595,7 @@ ul {
       object-fit: cover;
 
       @include respond-to($breakpoint-mobile) {
-        height: 300px;
+        height: auto;
       }
     }
   }
