--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1326,7 +1326,7 @@ ul {
     font-weight: $font-weight-demi;
     line-height: 50px;
     letter-spacing: 0.4px;
-    margin-bottom: $spacing-lg;
+    margin-bottom: 10px;
     color: $color-off-black;
 
     @include respond-to($breakpoint-mobile) {
