--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -373,7 +373,7 @@ ul {
 
 .info-card {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: 48px;
   border-radius: 24px;
   background-color: transparent;
@@ -417,7 +417,7 @@ ul {
 }
 .info-card__content {
   flex: 1;
-  max-width: 450px;
+  max-width: 490px;
   padding: 48px;
 }
 @media (max-width: 768px) {
@@ -487,11 +487,9 @@ ul {
 }
 .info-card__image {
   flex: 1;
-  max-width: 524px;
+  max-width: 490px;
   display: flex;
   margin-left: auto;
-  border-radius: 24px;
-  overflow: hidden;
 }
 @media (max-width: 768px) {
   .info-card__image {
@@ -502,8 +500,10 @@ ul {
 }
 .info-card__image img {
   width: 100%;
-  height: 524px;
+  height: 460px;
   object-fit: cover;
+  border-radius: 24px;
+  overflow: hidden;
 }
 @media (max-width: 768px) {
   .info-card__image img {
