--- a/src/styles.scss
+++ b/src/styles.scss
@@ -449,7 +449,7 @@ ul {
 
 .info-card {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: $spacing-xl;
   border-radius: $radius-md;
   background-color: transparent;
@@ -498,7 +498,7 @@ ul {
 
   &__content {
     flex: 1;
-    max-width: 450px;
+    max-width: 490px;
     padding: $spacing-xl;
 
     @include respond-to($breakpoint-mobile) {
@@ -577,11 +577,9 @@ ul {
 
   &__image {
     flex: 1;
-    max-width: 524px;
+    max-width: 490px;
     display: flex;
     margin-left: auto;
-    border-radius: $radius-md;
-    overflow: hidden;
 
     @include respond-to($breakpoint-mobile) {
       width: 100%;
@@ -591,8 +589,10 @@ ul {
 
     img {
       width: 100%;
-      height: 524px;
+      height: 460px;
       object-fit: cover;
+      border-radius: $radius-md;
+      overflow: hidden;
 
       @include respond-to($breakpoint-mobile) {
         height: auto;
