--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -842,7 +842,7 @@ ul {
 }
 @media (max-width: 768px) {
   .resources__container {
-    padding: 32px;
+    padding: 24px;
   }
 }
 .resources__title {
@@ -992,6 +992,12 @@ ul {
   position: relative;
   z-index: 10;
   max-width: 600px;
+  padding: 64px;
+}
+@media (max-width: 768px) {
+  .contact__content {
+    padding: 24px;
+  }
 }
 .contact__title {
   font-size: 48px;
@@ -1013,6 +1019,10 @@ ul {
   line-height: 30px;
   color: #ffffff;
   margin-bottom: 32px;
+}
+.contact__description a {
+  display: inline-block;
+  line-height: 1.3;
 }
 .contact__button {
   display: inline-flex;
