Improve mobile hero section layout and visibility
- Align hero content to top on mobile instead of vertically centering (padding-top: 100px)
- Increase background image opacity on mobile from 0.16 to 1 for better visibility
- Enlarge person images on mobile from 45% to 55% width for better visual balance
- Adjust desktop right person image position (right: -20px instead of -30px)
- Reduce mobile hero title font size from 50px to 43px (line-height 50px) for better fit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,6 +185,10 @@ ul {
     object-fit: cover;
     opacity: 0.16;
     z-index: 2;
+
+    @include respond-to($breakpoint-mobile) {
+      opacity: 1;
+    }
   }
 
   &__color-overlay {
@@ -211,7 +215,7 @@ ul {
       bottom: 0;
 
       @include respond-to($breakpoint-mobile) {
-        width: 45%;
+        width: 55%;
         height: auto;
         left: -10%;
         bottom: 0;
@@ -223,11 +227,11 @@ ul {
     &--right {
       width: 400px;
       height: auto;
-      right: -30px;
+      right: -20px;
       bottom: 0;
 
       @include respond-to($breakpoint-mobile) {
-        width: 45%;
+        width: 55%;
         height: auto;
         right: -10%;
         bottom: 0;
@@ -247,6 +251,11 @@ ul {
     padding: $spacing-md;
     max-width: 550px;
     margin: 0 auto;
+
+    @include respond-to($breakpoint-mobile) {
+      justify-content: flex-start;
+      padding-top: 100px;
+    }
   }
 
   &__logo {
@@ -275,8 +284,8 @@ ul {
     }
 
     @include respond-to($breakpoint-mobile) {
-      font-size: 50px;
-      line-height: 58px;
+      font-size: 43px;
+      line-height: 50px;
       max-width: 333px;
     }
   }
