--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,6 +119,11 @@ ul {
   opacity: 0.16;
   z-index: 2;
 }
+@media (max-width: 768px) {
+  .hero__background-image {
+    opacity: 1;
+  }
+}
 .hero__color-overlay {
   position: absolute;
   top: 0;
@@ -148,7 +153,7 @@ ul {
 }
 @media (max-width: 768px) {
   .hero__image--left {
-    width: 45%;
+    width: 55%;
     height: auto;
     left: -10%;
     bottom: 0;
@@ -159,12 +164,12 @@ ul {
 .hero__image--right {
   width: 400px;
   height: auto;
-  right: -30px;
+  right: -20px;
   bottom: 0;
 }
 @media (max-width: 768px) {
   .hero__image--right {
-    width: 45%;
+    width: 55%;
     height: auto;
     right: -10%;
     bottom: 0;
@@ -184,6 +189,12 @@ ul {
   padding: 24px;
   max-width: 550px;
   margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .hero__content {
+    justify-content: flex-start;
+    padding-top: 100px;
+  }
 }
 .hero__logo {
   width: 267px;
@@ -213,8 +224,8 @@ ul {
 }
 @media (max-width: 768px) {
   .hero__title {
-    font-size: 50px;
-    line-height: 58px;
+    font-size: 43px;
+    line-height: 50px;
     max-width: 333px;
   }
 }
